welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:5: error: java.io.PrintStream does not take parameters
                                           System.out(a0)
                                                     ^